--- a/src/main/resources/menu.html
+++ b/src/main/resources/menu.html
@@ -34,7 +34,7 @@
 
 <body>
     <div class="caja">
-        <h1 id="sd1">UNO</h1>
+        <h1 id="sd1">UNO JAVA</h1>
         <input type="text" id="idPartida" placeholder="ID de la partida">
         <input type="text" id="Jugador" placeholder="ID del jugador (numeric)">
 
